WIP: Code generation and more